--- a/angular-monorepo/package.json
+++ b/angular-monorepo/package.json
@@ -44,7 +44,7 @@
     "@swc/helpers": "~0.5.2",
     "@types/express": "4.17.14",
     "@types/jest": "^29.4.0",
-    "@types/node": "18.16.9",
+    "@types/node": "^18.16.9",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "cypress": "13.6.4",
