--- a/Server/Server/appsettings.json
+++ b/Server/Server/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ServerContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Server;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
